--- a/index.html
+++ b/index.html
@@ -1,36 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | 3-column preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Frontend Mentor | 3-column preview card component</title>
+  </head>
+  <body>
+    <main class="container">
+      <section class="section">
+        <div class="row">
+          <!-- Col 1 Start -->
+          <div class="col">
+            <article class="card bg-orange">
+              <div class="card-body">
+                <img
+                  src="./images/icon-sedans.svg"
+                  alt="Sedan"
+                  class="card-icon"
+                />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+                <h1 class="h2 card-title">Sedans</h1>
+                <p class="card-text">
+                  Choose a sedan for its affordability and excellent fuel
+                  economy. Ideal for cruising in the city or on your next road
+                  trip.
+                </p>
+                <button class="btn btn-orange">Learn More</button>
+              </div>
+            </article>
+          </div>
+          <!-- Col 1 End -->
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+          <!-- Col 2 Start -->
+          <div class="col">
+            <article class="card bg-dark-cyan">
+              <div class="card-body">
+                <img
+                  src="./images/icon-suvs.svg"
+                  alt="Sedan"
+                  class="card-icon"
+                />
+                <h1 class="h2 card-title">SUVs</h1>
+                <p class="card-text">
+                  Take an SUV for its spacious interior, power, and versatility.
+                  Perfect for your next family vacation and off-road adventures.
+                </p>
+                <button class="btn btn-dark-cyan">Learn More</button>
+              </div>
+            </article>
+          </div>
+          <!-- Col 2 End -->
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+          <!-- Col 3 Start -->
+          <div class="col">
+            <article class="card bg-very-dark-cyan">
+              <div class="card-body">
+                <img
+                  src="./images/icon-luxury.svg"
+                  alt="Sedan"
+                  class="card-icon"
+                />
+                <h1 class="h2 card-title">Luxury</h1>
+                <p class="card-text">
+                  Cruise in the best car brands without the bloated prices.
+                  Enjoy the enhanced comfort of a luxury rental and arrive in
+                  style.
+                </p>
+                <button class="btn btn-very-dark-cyan">Learn More</button>
+              </div>
+            </article>
+          </div>
+          <!-- Col 3 End -->
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
