Removed section tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <main class="container">
-      <section class="section">
+      <div class="section">
         <div class="row">
           <!-- Col 1 Start -->
           <div class="col">
@@ -89,7 +89,7 @@
           </div>
           <!-- Col 3 End -->
         </div>
-      </section>
+      </div>
     </main>
   </body>
 </html>
